# KyleBot

./: .gitignore  CMakeLists.txt  Dockerfile  compile_commands.json
.github/workflows/: docker-publish.yml
kylebot-charts/: Chart.yaml  values.yaml
kylebot-charts/templates/: deployment.yaml  secret.yaml
src/: database.h  main.cpp  util.cpp  util.h
